--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+/* styles/globals.css */
+@import url("https://fonts.googleapis.com/css2?family=Gabarito&display=swap");
+
+body {
+  font-family: "Gabarito", sans-serif;
+}
 
 *,
 *::before,
